--- a/probando.html
+++ b/probando.html
@@ -12,9 +12,9 @@
         <h1><b>Titulos</b></h1>
         <h2><b>Titulo2</b></h2>
         <script>
-            let a;
-            let b;
-            let c;
+            let a1;
+            let b1;
+            let c1;
             console.log(name);
             alert("Scope");
         </script>
